--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,7 @@ jobs:
       run: |
         if (!require('remotes')) install.packages('remotes')
         if (!require('rvest')) install.packages('rvest')
+        if (!require('janitor')) install.packages('janitor')
       shell: Rscript {0}
 
     - name: Fetch stats and update README.md
