--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: CI checking Google
+name: CI scrape Google scholar articles
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
