--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,8 +16,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - uses: r-lib/actions/setup-r@master
-    - uses: r-lib/actions/setup-pandoc@master
+    - uses: r-lib/actions/setup-r@main
+    - uses: r-lib/actions/setup-pandoc@main
 
     - name: Cache R packages
       uses: actions/cache@v1
