--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,8 +14,14 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+on:
+  schedule:
+    - cron: '0 0 1 * *' # First of every month at midnight
+  workflow_dispatch: ~
+
     steps:
     - uses: actions/checkout@v2
+    - uses: browser-actions/setup-chrome@v2
     - uses: r-lib/actions/setup-r@v2
     - uses: r-lib/actions/setup-pandoc@v2
 
