--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,9 +21,25 @@ on:
 
     steps:
     - uses: actions/checkout@v2
-    - uses: browser-actions/setup-chrome@v2
     - uses: r-lib/actions/setup-r@v2
     - uses: r-lib/actions/setup-pandoc@v2
+
+    - name: Install Chrome
+      run: |
+        wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
+        sudo mkdir -p /etc/apt/sources.list.d
+        sudo sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list'
+        sudo apt-get update
+        sudo apt-get -y install google-chrome-stable
+    - name: Install ChromeDriver
+      run: |
+        # Using specific ChromeDriver version for Chrome I used 132
+        CHROMEDRIVER_VERSION="132.0.6834.83"
+        echo "Installing ChromeDriver version: $CHROMEDRIVER_VERSION"
+        wget -q "https://edgedl.me.gvt1.com/edgedl/chrome/chrome-for-testing/$CHROMEDRIVER_VERSION/linux64/chromedriver-linux64.zip"
+        unzip chromedriver-linux64.zip
+        chmod +x chromedriver-linux64/chromedriver
+        sudo mv chromedriver-linux64/chromedriver /usr/local/bin/
 
     - name: Cache R packages
       uses: actions/cache@v3
